package ar.edu.utn.frba.ddsi.donaciones.models.entities;

public enum EstadoNotificacion {
    PENDIENTE,
    ENVIADA
}