package ar.edu.utn.frba.ddsi.donaciones.models.entities;

public enum MedioNotificacion {
    EMAIL,
    SMS,
    WHATSAPP
}
